# oracle-object-tracker

./: .gitignore  LICENSE  README.md  pdf_report.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
src/oracle_object_tracker/: config.py  database.py  main.py
